[gd_scene load_steps=15 format=3 uid="uid://cbcj1sulss7dv"]

[ext_resource type="Script" path="res://ui/gui.gd" id="1_80ed7"]
[ext_resource type="PackedScene" uid="uid://dovum0hd7bil2" path="res://ui/build_popup.tscn" id="2_xcpf8"]
[ext_resource type="Theme" uid="uid://d24e25bfjbwcu" path="res://ui/osa_theme.tres" id="4_in74v"]
[ext_resource type="Texture2D" uid="uid://fi4w88lfr1yh" path="res://assets/sprites/Tiny Swords/UI/Icons/Regular_02.png" id="6_kx8ih"]
[ext_resource type="Texture2D" uid="uid://hm7o4ikvg32d" path="res://assets/sprites/Tiny Swords/UI/Icons/Pressed_02.png" id="7_bjnf8"]
[ext_resource type="Texture2D" uid="uid://bcknr4q2etlnq" path="res://assets/sprites/Tiny Swords/UI/Icons/Regular_03.png" id="7_ymxl3"]
[ext_resource type="Texture2D" uid="uid://bx8ng7jq4k0kj" path="res://assets/sprites/Tiny Swords/UI/Icons/Pressed_03.png" id="8_33hyq"]
[ext_resource type="PackedScene" uid="uid://djknjr0mpajet" path="res://ui/resource.tscn" id="9_agowt"]
[ext_resource type="Texture2D" uid="uid://byftdtfaarfuq" path="res://ui/textures/meat_texture_cropped.tres" id="10_yj68v"]
[ext_resource type="Texture2D" uid="uid://ccayd7nfsqu3a" path="res://ui/textures/wood_texture_cropped.tres" id="11_c7mhy"]
[ext_resource type="Texture2D" uid="uid://51dxy87hapxj" path="res://ui/textures/gold_texture_cropped.tres" id="12_71t7h"]

[sub_resource type="Animation" id="Animation_vlfhb"]
resource_name = "show_settings"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsPanel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Vector2(19, -124), Vector2(19, -13)]
}

[sub_resource type="Animation" id="Animation_827f2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(19, -124)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3arie"]
_data = {
"RESET": SubResource("Animation_827f2"),
"show_settings": SubResource("Animation_vlfhb")
}

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_80ed7")

[node name="BuildPopup" parent="." instance=ExtResource("2_xcpf8")]

[node name="SettingsPanel" type="Panel" parent="."]
offset_left = 19.0
offset_top = -124.0
offset_right = 132.0
offset_bottom = 125.0
theme = ExtResource("4_in74v")
theme_type_variation = &"BCDPanel"

[node name="MuteButton" type="TextureButton" parent="SettingsPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 35.0
offset_right = 102.0
offset_bottom = 114.0
toggle_mode = true
texture_normal = ExtResource("7_ymxl3")
texture_pressed = ExtResource("8_33hyq")
stretch_mode = 0

[node name="SettingsButton" type="TextureButton" parent="SettingsPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 129.0
offset_right = 109.0
offset_bottom = 229.0
texture_normal = ExtResource("6_kx8ih")
texture_pressed = ExtResource("7_bjnf8")
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3arie")
}

[node name="ResourcesPanel" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -261.0
offset_top = -167.0
offset_right = 261.379
offset_bottom = 12.8423
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme = ExtResource("4_in74v")
theme_type_variation = &"HorizontalBanner"

[node name="HBoxContainer" type="HBoxContainer" parent="ResourcesPanel"]
layout_mode = 2

[node name="MeatResource" parent="ResourcesPanel/HBoxContainer" instance=ExtResource("9_agowt")]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="ResourcesPanel/HBoxContainer/MeatResource"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("10_yj68v")
stretch_mode = 5

[node name="Spacer" type="MarginContainer" parent="ResourcesPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="WoodResource" parent="ResourcesPanel/HBoxContainer" instance=ExtResource("9_agowt")]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="ResourcesPanel/HBoxContainer/WoodResource"]
layout_mode = 2
texture = ExtResource("11_c7mhy")
stretch_mode = 5

[node name="Spacer2" type="MarginContainer" parent="ResourcesPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="GoldResource" parent="ResourcesPanel/HBoxContainer" instance=ExtResource("9_agowt")]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="ResourcesPanel/HBoxContainer/GoldResource"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("12_71t7h")
stretch_mode = 5

[connection signal="pressed" from="SettingsPanel/MuteButton" to="." method="_on_mute_button_pressed"]
[connection signal="pressed" from="SettingsPanel/SettingsButton" to="." method="_on_settings_button_pressed"]
